fix: change les routes pour être en accord avec ce qu'est un API REST
Avant les routes contenaient un verbe action. Pas besoin car l'action est contenu dans le verbe http
